--- a/index.html
+++ b/index.html
@@ -236,21 +236,11 @@
                         <div class="navbar-nav mr-auto py-0">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="shop.html" class="nav-item nav-link">Shop</a>
-                            <a href="detail.html" class="nav-item nav-link">Shop Detail</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages <i class="fa fa-angle-down mt-1"></i></a>
-                                <div class="dropdown-menu bg-primary rounded-0 border-0 m-0">
-                                    <a href="cart.html" class="dropdown-item">Shopping Cart</a>
-                                    <a href="checkout.html" class="dropdown-item">Checkout</a>
-                                </div>
-                            </div>
+                            <a href="cart.html" class="nav-item nav-link">Shopping Cart</a>
+                            <a href="checkout.html" class="nav-item nav-link">Checkout</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="navbar-nav ml-auto py-0 d-none d-lg-block">
-                            <a href="" class="btn px-0">
-                                <i class="fas fa-heart text-primary"></i>
-                                <span class="badge text-secondary border border-secondary rounded-circle" style="padding-bottom: 2px;">0</span>
-                            </a>
                             <a href="cart.html" class="btn px-0 ml-3">
                                 <i class="fas fa-shopping-cart text-primary"></i>
                                 <span class="cartquantity badge text-secondary border border-secondary rounded-circle" style="padding-bottom: 2px;">0</span>
@@ -281,17 +271,23 @@
                                 <div class="p-3" style="max-width: 700px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">IT Accessories</h1>
                                     <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Enhance your setup with high-quality accessories built for work, play, and everything in between</p>
-                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a>
+                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="shop.html?category=gaming-gear-products">Shop Now
+                                    </a>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item position-relative" style="height: 430px;">
-                            <img class="position-absolute w-100 h-100" src="img/use/new-carousel2.jpg" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="img/use/product/Games/game2.jpg" style="object-fit: cover;">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
-                                    <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Apple</h1>
-                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Experience innovation and elegance with the latest Apple products designed to simplify your life</p>
-                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a>
+                                    <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">The Last of Us™ Part II Remastered</h1>
+                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Experience innovation and elegance with The Last of Us™ Part II Remastered</p>
+                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="detail.html"
+                                        onclick="event.preventDefault();
+                                        localStorage.setItem('productid', '7'); 
+                                        localStorage.setItem('productcategory', 'Games');
+                                        window.location.href='detail.html';">
+                                        >Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -301,7 +297,12 @@
                                 <div class="p-3" style="max-width: 700px;">
                                     <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">VR</h1>
                                     <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Dive into new realities with cutting-edge VR gear that transforms how you play and explore</p>
-                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a>
+                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="detail.html"
+                                        onclick="event.preventDefault(); 
+                                        localStorage.setItem('productid', '2'); 
+                                        localStorage.setItem('productcategory', 'Gaming-Gear');
+                                        window.location.href='detail.html';">
+                                        >Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -314,7 +315,7 @@
                     <div class="offer-text">
                         <h6 class="text-white text-uppercase">Special Offer</h6>
                         <h3 class="text-white mb-3">Gift Card</h3>
-                        <a href="" class="btn btn-primary">Shop Now</a>
+                        <a href="shop.html?category=gift-card-products" class="btn btn-primary">Shop Now</a>
                     </div>
                 </div>
                 <div class="product-offer mb-30" style="height: 200px;">
@@ -322,7 +323,7 @@
                     <div class="offer-text">
                         <h6 class="text-white text-uppercase">Special Offer</h6>
                         <h3 class="text-white mb-3">Games</h3>
-                        <a href="" class="btn btn-primary">Shop Now</a>
+                        <a href="shop.html?category=games-products" class="btn btn-primary">Shop Now</a>
                     </div>
                 </div>
             </div>
@@ -362,64 +363,6 @@
     </div>
     <!-- Featured End -->
 
-
-    <!-- Categories Start -->
-    <div class="container-fluid pt-5">
-        <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4"><span class="bg-secondary pr-3">Categories</span></h2>
-        <div class="row px-xl-5 pb-3">
-            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-                <a class="text-decoration-none" href="">
-                    <div class="cat-item d-flex align-items-center mb-4">
-                        <div class="overflow-hidden" style="width: 100px; height: 100px;">
-                            <img class="img-fluid" src="img/cat-1.jpg" alt="">
-                        </div>
-                        <div class="flex-fill pl-3">
-                            <h6>Gaming Gear</h6>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-                <a class="text-decoration-none" href="">
-                    <div class="cat-item img-zoom d-flex align-items-center mb-4">
-                        <div class="overflow-hidden" style="width: 100px; height: 100px;">
-                            <img class="img-fluid" src="img/cat-2.jpg" alt="">
-                        </div>
-                        <div class="flex-fill pl-3">
-                            <h6>Games</h6>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-                <a class="text-decoration-none" href="">
-                    <div class="cat-item img-zoom d-flex align-items-center mb-4">
-                        <div class="overflow-hidden" style="width: 100px; height: 100px;">
-                            <img class="img-fluid" src="img/cat-3.jpg" alt="">
-                        </div>
-                        <div class="flex-fill pl-3">
-                            <h6>Gift Card</h6>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-                <a class="text-decoration-none" href="">
-                    <div class="cat-item img-zoom d-flex align-items-center mb-4">
-                        <div class="overflow-hidden" style="width: 100px; height: 100px;">
-                            <img class="img-fluid" src="img/cat-4.jpg" alt="">
-                        </div>
-                        <div class="flex-fill pl-3">
-                            <h6>Console</h6>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-    <!-- Categories End -->
-
-
     <!-- Products Game Console Start -->
     <div class="container-fluid pt-5 pb-3">
         <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4">
@@ -440,7 +383,7 @@
                     <div class="offer-text">
                         <h6 class="text-white text-uppercase">Special Offer</h6>
                         <h3 class="text-white mb-3">Gaming Gear</h3>
-                        <a href="" class="btn btn-primary">Shop Now</a>
+                        <a href="shop.html?category=gaming-gear-products" class="btn btn-primary">Shop Now</a>
                     </div>
                 </div>
             </div>
@@ -450,7 +393,7 @@
                     <div class="offer-text">
                         <h6 class="text-white text-uppercase">Special Offer</h6>
                         <h3 class="text-white mb-3">Games</h3>
-                        <a href="" class="btn btn-primary">Shop Now</a>
+                        <a href="shop.html?category=games-products" class="btn btn-primary">Shop Now</a>
                     </div>
                 </div>
             </div>
@@ -576,7 +519,7 @@
         fetch('backend/data/Gift-Card.json')
         .then(response => response.json())
         .then(data => displayGiftcard(data))
-        .catch(error => console.error('Error loading console data:', error));
+        .catch(error => console.error('Error loading giftcard data:', error));
     };
     //ดึงข้อมูลมาจาก console.json
         function displayConsoles(data) {
@@ -585,34 +528,36 @@
 
             data.forEach(product => {
                 const html = `
-                <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-                    <div class="product-item bg-light mb-4">
-                        <div class="product-img position-relative overflow-hidden" style="height: 250px;">
-                            <img class="img-fluid w-100" style="height: 100%; object-fit: cover;" src="${product.image}" alt="">
-                            <div class="product-action">
-                                <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
-                                <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
-                                <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>
-                                <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>
-                            </div>
-                        </div>
-                        <div class="text-center py-4">
-                            <a class="h6 text-decoration-none text-truncate" href="#">${product.name}</a>
-                            <div class="d-flex align-items-center justify-content-center mt-2">
-                                <h5>$${product.price.toFixed(2)}</h5><h6 class="text-muted ml-2"><del>$${(product.price * 1.2).toFixed(2)}</del></h6>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-center mb-1">
-                                <small class="fa fa-star text-primary mr-1"></small>
-                                <small class="fa fa-star text-primary mr-1"></small>
-                                <small class="fa fa-star text-primary mr-1"></small>
-                                <small class="fa fa-star-half-alt text-primary mr-1"></small>
-                                <small class="far fa-star text-primary mr-1"></small>
-                                <small>(99)</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                `;
+    <div class="col-lg-3 col-md-4 col-sm-6 pb-3">
+      <div class="product-item bg-light mb-4 h-100 d-flex flex-column justify-content-between">
+        <div class="product-img position-relative overflow-hidden" style="height: 250px;">
+          <img class="img-fluid w-100" style="height: 100%; object-fit: cover;" src="${product.image}" alt="${product.name}">
+          <div class="product-action">
+            <a class="btn btn-outline-dark btn-square" href="#"><i class="fa fa-shopping-cart"></i></a>
+            <a class="btn btn-outline-dark btn-square" href="detail.html"
+              onclick="event.preventDefault(); 
+                       localStorage.setItem('productid', '${product.id}'); 
+                       localStorage.setItem('productcategory', '${product.category}');
+                       window.location.href='detail.html';">
+              <i class="fa fa-search"></i>
+            </a>
+          </div>
+        </div>
+        <div class="text-center py-4 px-2 flex-grow-1 d-flex flex-column justify-content-between">
+          <div>
+            <a class="h6 text-decoration-none text-truncate d-block mb-2" href="detail.html"
+            onclick="event.preventDefault(); 
+                       localStorage.setItem('productid', '${product.id}'); 
+                       localStorage.setItem('productcategory', '${product.category}');
+                       window.location.href='detail.html';">${product.name}</a>
+            <p class="small text-muted mb-2">${product.description}</p>
+          </div>
+          <div class="d-flex align-items-center justify-content-center mt-2">
+          </div>
+        </div>
+      </div>
+    </div>
+  `;
                 container.insertAdjacentHTML('beforeend', html);
             });
         }
@@ -624,34 +569,36 @@
 
             data.forEach(product => {
                 const html = `
-                <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-                    <div class="product-item bg-light mb-4">
-                        <div class="product-img position-relative overflow-hidden" style="height: 400px;">
-                            <img class="img-fluid w-100" style="height: 100%; object-fit: cover;" src="${product.image}" alt="">
-                            <div class="product-action">
-                                <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
-                                <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
-                                <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>
-                                <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>
-                            </div>
-                        </div>
-                        <div class="text-center py-4">
-                            <a class="h6 text-decoration-none text-truncate" href="#">${product.name}</a>
-                            <div class="d-flex align-items-center justify-content-center mt-2">
-                                <h5>$${product.price.toFixed(2)}</h5>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-center mb-1">
-                                <small class="fa fa-star text-primary mr-1"></small>
-                                <small class="fa fa-star text-primary mr-1"></small>
-                                <small class="fa fa-star text-primary mr-1"></small>
-                                <small class="fa fa-star-half-alt text-primary mr-1"></small>
-                                <small class="far fa-star text-primary mr-1"></small>
-                                <small>(99)</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                `;
+    <div class="col-lg-3 col-md-4 col-sm-6 pb-3">
+      <div class="product-item bg-light mb-4 h-100 d-flex flex-column justify-content-between">
+        <div class="product-img position-relative overflow-hidden" style="height: 250px;">
+          <img class="img-fluid w-100" style="height: 100%; object-fit: cover;" src="${product.image}" alt="${product.name}">
+          <div class="product-action">
+            <a class="btn btn-outline-dark btn-square" href="#"><i class="fa fa-shopping-cart"></i></a>
+            <a class="btn btn-outline-dark btn-square" href="detail.html"
+              onclick="event.preventDefault(); 
+                       localStorage.setItem('productid', '${product.id}'); 
+                       localStorage.setItem('productcategory', '${product.category}');
+                       window.location.href='detail.html';">
+              <i class="fa fa-search"></i>
+            </a>
+          </div>
+        </div>
+        <div class="text-center py-4 px-2 flex-grow-1 d-flex flex-column justify-content-between">
+          <div>
+            <a class="h6 text-decoration-none text-truncate d-block mb-2" href="detail.html"
+            onclick="event.preventDefault(); 
+                       localStorage.setItem('productid', '${product.id}'); 
+                       localStorage.setItem('productcategory', '${product.category}');
+                       window.location.href='detail.html';">${product.name}</a>
+            <p class="small text-muted mb-2">${product.description}</p>
+          </div>
+          <div class="d-flex align-items-center justify-content-center mt-2">
+          </div>
+        </div>
+      </div>
+    </div>
+  `;
                 container.insertAdjacentHTML('beforeend', html);
             });
         }
