--- a/contact.html
+++ b/contact.html
@@ -277,7 +277,7 @@
         <div class="col-lg-7 mb-5">
             <div class="contact-form bg-light p-30">
                 <div id="success"></div>
-                <form name="sentMessage" id="contactForm" novalidate="novalidate">
+               <form id="contactForm" onsubmit="submitContact(event)">
                     <div class="control-group mb-3">
                         <input type="text" class="form-control" id="name" placeholder="Your Name"
                             required="required" data-validation-required-message="Please enter your name" />
@@ -357,14 +357,14 @@
                     <div class="col-md-4 mb-5">
                         <h5 class="text-secondary text-uppercase mb-4">Newsletter</h5>
                     
-                        <form action="">
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Your Email Address">
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary">Sign Up</button>
-                                </div>
-                            </div>
-                        </form>
+                       <form onsubmit="submitNewsletter(event)">
+  <div class="input-group">
+    <input type="email" id="newsletterEmail" class="form-control" placeholder="Your Email Address" required>
+    <div class="input-group-append">
+      <button class="btn btn-primary">Sign Up</button>
+    </div>
+  </div>
+</form>
                         <h6 class="text-secondary text-uppercase mt-4 mb-3">Follow Us</h6>
                         <div class="d-flex">
                             <a class="btn btn-primary btn-square mr-2" href="https://www.facebook.com/CAMTOfficial"><i class="fab fa-facebook-f"></i></a>
@@ -438,6 +438,43 @@
 </script>
 <!--สคริปต์หน้าล็อคอินกับสร้างบัญชี-->
 <script src="Register.js"></script>
+<script>
+function submitNewsletter(e) {
+  e.preventDefault();
+  const email = document.getElementById("newsletterEmail").value;
+  fetch('http://localhost:5000/api/newsletter', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ email })
+  }).then(res => res.json())
+    .then(data => alert(data.message))
+    .catch(err => alert('Error: ' + err));
+}
+</script>
+<script>
+function submitContact(e) {
+  e.preventDefault();
+  const name = document.getElementById("name").value;
+  const email = document.getElementById("email").value;
+  const subject = document.getElementById("subject").value;
+  const message = document.getElementById("message").value;
+
+ fetch('http://localhost:5000/api/contactus', {
+  method: 'POST',
+  headers: { 'Content-Type': 'application/json' },
+  body: JSON.stringify({ name, email, subject, message })
+})
+.then(res => {
+  if (!res.ok) throw new Error("Network response was not ok");
+  return res.json();
+})
+.then(data => alert(data.message))
+.catch(err => {
+  console.error('❌ Error:', err);
+  alert("ส่งไม่สำเร็จ: " + err.message);
+});
+}
+</script>
 </body>
 
 </html>
