--- a/shop.html
+++ b/shop.html
@@ -350,14 +350,14 @@
                     <div class="col-md-4 mb-5">
                         <h5 class="text-secondary text-uppercase mb-4">Newsletter</h5>
                     
-                        <form action="">
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Your Email Address">
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary">Sign Up</button>
-                                </div>
-                            </div>
-                        </form>
+                       <form onsubmit="submitNewsletter(event)">
+  <div class="input-group">
+    <input type="email" id="newsletterEmail" class="form-control" placeholder="Your Email Address" required>
+    <div class="input-group-append">
+      <button class="btn btn-primary">Sign Up</button>
+    </div>
+  </div>
+</form>
                         <h6 class="text-secondary text-uppercase mt-4 mb-3">Follow Us</h6>
                         <div class="d-flex">
                             <a class="btn btn-primary btn-square mr-2" href="https://www.facebook.com/CAMTOfficial"><i class="fab fa-facebook-f"></i></a>
@@ -603,6 +603,19 @@ input.addEventListener('input', () => {
 });
 
 
+</script>
+<script>
+function submitNewsletter(e) {
+  e.preventDefault();
+  const email = document.getElementById("newsletterEmail").value;
+  fetch('http://localhost:5000/api/newsletter', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ email })
+  }).then(res => res.json())
+    .then(data => alert(data.message))
+    .catch(err => alert('Error: ' + err));
+}
 </script>
 </body>
 
