--- a/cart.html
+++ b/cart.html
@@ -152,7 +152,7 @@
     <!-- Topbar Start -->
     <div class="container-fluid">
         <div class="row bg-secondary py-1 px-xl-5">
-            <div class="col-lg-6 d-none d-lg-block">
+            <div class="col-lg-6">
                 <div class="d-inline-flex align-items-center h-100">
                     <a class="text-body mr-3" href="about-us.html ">About</a>
                     <a class="text-body mr-3" href="contact.html">Contact</a>
@@ -166,10 +166,6 @@
                         <div class="btn-group" id="accountDropdown"></div>
                 </div>
                 <div class="d-inline-flex align-items-center d-block d-lg-none">
-                    <a href="" class="btn px-0 ml-2">
-                        <i class="fas fa-heart text-dark"></i>
-                        <span class="badge text-dark border border-dark rounded-circle" style="padding-bottom: 2px;">0</span>
-                    </a>
                     <a href="cart.html" class="btn px-0 ml-2">
                         <i class="fas fa-shopping-cart text-dark"></i>
                         <span class="cartquantity badge text-dark border border-dark rounded-circle" style="padding-bottom: 2px;">0</span>
